<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="wrap_content" android:layout_weight="1"
	android:padding="8dp" android:minWidth="320dp">

	<CheckBox android:layout_width="wrap_content" android:text="@string/txt_volume_bind"
		android:textAppearance="@style/TextSmall" android:layout_height="wrap_content"
		android:id="@+id/checkbox1" />

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:layout_height="wrap_content" android:text="@string/txt_volume_ringer" />
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="wrap_content" android:id="@+id/text1"
			android:layout_height="wrap_content" android:text="1/7" />
	</LinearLayout>
	<SeekBar android:id="@+id/slider1" android:maxHeight="16dp"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<LinearLayout android:orientation="horizontal"
		android:layout_marginTop="4dp" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:layout_height="wrap_content" android:text="@string/txt_volume_notification" />
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="wrap_content" android:id="@+id/text2"
			android:layout_height="wrap_content" android:text="1/7" />
	</LinearLayout>
	<SeekBar android:id="@+id/slider2" android:maxHeight="16dp"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<LinearLayout android:orientation="horizontal"
		android:layout_marginTop="4dp" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:layout_height="wrap_content" android:text="@string/txt_volume_media" />
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="wrap_content" android:id="@+id/text3"
			android:layout_height="wrap_content" android:text="1/15" />
	</LinearLayout>
	<SeekBar android:id="@+id/slider3" android:maxHeight="16dp"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<LinearLayout android:orientation="horizontal"
		android:layout_marginTop="4dp" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:layout_height="wrap_content" android:text="@string/txt_volume_alarm" />
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="wrap_content" android:id="@+id/text4"
			android:layout_height="wrap_content" android:text="1/7" />
	</LinearLayout>
	<SeekBar android:id="@+id/slider4" android:maxHeight="16dp"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<LinearLayout android:orientation="horizontal"
		android:layout_marginTop="4dp" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:layout_height="wrap_content" android:text="@string/txt_volume_voice_call" />
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="wrap_content" android:id="@+id/text5"
			android:layout_height="wrap_content" android:text="1/5" />
	</LinearLayout>
	<SeekBar android:id="@+id/slider5" android:maxHeight="16dp"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<LinearLayout android:orientation="horizontal"
		android:layout_marginTop="4dp" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:layout_height="wrap_content" android:text="@string/txt_volume_system" />
		<TextView android:textAppearance="@style/TextSmall"
			android:layout_width="wrap_content" android:id="@+id/text6"
			android:layout_height="wrap_content" android:text="1/7" />
	</LinearLayout>
	<SeekBar android:id="@+id/slider6" android:maxHeight="16dp"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

</LinearLayout>
